Fix screen share overlay covering video overlay

--- a/demo/layout-grid.css
+++ b/demo/layout-grid.css
@@ -25,7 +25,7 @@
 }
 
 /** Alone in call **/
-.daily-videos-wrapper.remote-cams-0 > .daily-video-div.local {
+.daily-video-div.local, .daily-video-div.screen {
 	grid-area: 1 / 1 / span 1 / span 1;
 }
 
@@ -63,8 +63,12 @@
 }
 
 /** Overlay bar colors **/
-.daily-video-div.local > .daily-video-overlay {
+.daily-video-overlay.local {
 	background-color: rgba(247, 178, 17, 0.9);
+}
+
+.daily-video-overlay.local.screen {
+	background: none;
 }
 
 .daily-video-div.remote:nth-child(2) .daily-video-overlay {
@@ -92,7 +96,7 @@
 
 .daily-video-div.cam-muted::before {
 	content: '';
-	background: rgba(247, 178, 17, 0.8) !important;
+	background: rgba(255, 255, 255, 0.3) !important;
 	width: 100%;
 	height: 100%;
 	position: absolute;
